--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <div class="container">
         <div class="head">
-            <h3 class="gen">Generate a</h3>
-            <h3 class="rand">random password</h3>
+            <!-- <h3 class="gen">Generate a</h3>
+            <h3 class="rand">random password</h3> -->
+            <h3 class ="gen">Random Password Generator</h3>
             <p class="never">Never use an insecure password again</p>
         </div>
         <p class="lenght">Please enter the lenght of the password <span>it should be less that 14 characters</span></p>
@@ -25,21 +26,21 @@
         <div class="display">
             <div class="btn-top">
                 <div class="div">
-                    <input type="text"  class="generated1" value="something in" >
+                    <input type="text"  class="generated1" value=" " placeholder="input here">
                 </div>
                 <button onclick="copyA()" id="copy">copy</button>
                 <div class="div" id="down">
-                    <input type="text"  class="generated2" value="something in" >
+                    <input type="text"  class="generated2" value=" " placeholder="input here" >
                 </div>
                 <button onclick="copyB()" id="copy" class="copy1">copy</button>
             </div>
             <div class="btn-down">
                 <div class="div">
-                    <input type="text"  class="generated3" value="something in" >
+                    <input type="text"  class="generated3" value=" " placeholder="input here" >
                 </div>
                 <button onclick="copyC()" id="copy">copy</button>
                 <div class="div" id="down">
-                    <input type="text"  class="generated4" value="something in" >
+                    <input type="text"  class="generated4" value=" " placeholder="input here" >
                 </div>
                 <button onclick="copyD()" id="copy" class="copy1">copy</button>
             </div>
