--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 <body>
     <div class="container">
         <div class="head">
-            <!-- <h3 class="gen">Generate a</h3>
-            <h3 class="rand">random password</h3> -->
             <h3 class ="gen">Random Password Generator</h3>
             <p class="never">Never use an insecure password again</p>
         </div>
@@ -28,21 +26,21 @@
                 <div class="div">
                     <input type="text" readonly class="generated1" id = "generated1" value=" " placeholder="input here">
                 </div>
-                <button onclick="copyA()" id="copy">copy</button>
+                <button id="copy1" class="copy">copy</button>
                 <div class="div" id="down">
                     <input type="text" readonly class="generated2" id="generated2" value=" " placeholder="input here" >
                 </div>
-                <button onclick="copyB()" id="copy" class="copy1">copy</button>
+                <button id="copy2" class="copy">copy</button>
             </div>
             <div class="btn-down">
                 <div class="div">
                     <input type="text" readonly class="generated3" id="generated3" value=" " placeholder="input here" >
                 </div>
-                <button onclick="copyC()" id="copy">copy</button>
+                <button id="copy3" class="copy">copy</button>
                 <div class="div" id="down">
                     <input type="text" readonly class="generated4" id="generated4" value=" " placeholder="input here" >
                 </div>
-                <button onclick="copyD()" id="copy" class="copy1">copy</button>
+                <button id="copy4" class="copy">copy</button>
             </div>
         </div>
     </div>
