--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
             <button class="generate" onclick="generate()"> Generate passwords</button>
         </div>
         <span id="state"></span>
-        <div class="display">
-            <div class="btn-top">
-                <div class="div">
+        <div class="copy-container">
+            <div class="copy-top">
+                <div class="copy-top one">
                     <input type="text" readonly class="generated1" id = "generated1" value=" " placeholder="input here">
+                    <button id="copy1" class="copy">copy</button>
                 </div>
-                <button id="copy1" class="copy">copy</button>
-                <div class="div" id="down">
+                <div class="copy-top two">
                     <input type="text" readonly class="generated2" id="generated2" value=" " placeholder="input here" >
+                    <button id="copy2" class="copy">copy</button>
                 </div>
-                <button id="copy2" class="copy">copy</button>
             </div>
-            <div class="btn-down">
-                <div class="div">
+            <div class="copy-down">
+                <div class="copy-down one">
                     <input type="text" readonly class="generated3" id="generated3" value=" " placeholder="input here" >
+                    <button id="copy3" class="copy">copy</button>
                 </div>
-                <button id="copy3" class="copy">copy</button>
-                <div class="div" id="down">
+                <div class="copy-down two">
                     <input type="text" readonly class="generated4" id="generated4" value=" " placeholder="input here" >
+                    <button id="copy4" class="copy">copy</button>
                 </div>
-                <button id="copy4" class="copy">copy</button>
             </div>
         </div>
     </div>
