--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h3 class ="gen">Random Password Generator</h3>
             <p class="never">Never use an insecure password again</p>
         </div>
-        <p class="lenght">Please enter the lenght of the password <span>it should be less that 14 characters</span></p>
+        <p class="lenght">Please enter your desired password length, <span>it should be less than 14</span></p>
         <div class="input">
             <input type="number" name="num" id="number">
         </div>
